# FuncCompiler

./: .gitignore  array.func  build.sh  fib.func  makefile  readme.md  test.func  test.sh
docs/report/middle-term-report/: report.md
docs/report/progress-report/: main.typ
res/test-case/: basic.func  do-block.func
res/test-case/basic/: basic.func  data.func  syc-err.func
res/test-case/syn-err/: 1.func
res/test-case/typ-chk/: type-checking-1.func  type-checking-2.func  type-checking-3.func  type-checking-4.func  type-checking-5.func  type-checking-6.func  type-checking-6.hs  type-checking-7.func  type-checking-8.func
res/test-case/typ-chk/err/: 1.func  10.func  2.func  3.func  4.func  5.func  6.func  7.func  8.func  9.func
res/test-case/z/: temp.func
src/: CMakeLists.txt  ast.cpp  ast.hpp  binop.cpp  binop.hpp  definition.cpp  definition.hpp  env.cpp  env.hpp  error.cpp  error.hpp  graph.cpp  graph.hpp  instruction.cpp  instruction.hpp  lexer.l  llvm_context.cpp  llvm_context.hpp  main.cpp  parsed_type.cpp  parsed_type.hpp  parser.y  prelude.cpp  prelude.hpp  runtime.c  runtime.h  scanner.l  test.cpp  type.cpp  type.hpp  type_env.cpp  type_env.hpp  uniop.cpp  uniop.hpp
